[tool.poetry]
name = "openmdao-deap"
version = "0.0.1"
description = ""
authors = ["Olle Vidner <olle@vidner.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
openmdao = "^2.5"
deap = "^1.2"
pandas = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
black = "^18.3-alpha.0"
flake8-isort = "^2.5"
pdbpp = "^0.9.2"
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
